--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,38 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	font-size: 62.5%;
+	padding: 1rem;
+}
+
+/* general css */
+.searchbox-container {
+	background-color: grey;
+}
+
+.heading {
+	color: white;
+}
+
+.header-container {
+	width: 100vw;
+	text-align: center;
+}
+
+/* home component */
+.home-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.searchbar {
+	width: 100vw;
+}
+
+.search-input {
+	width: calc(100% - 70px);
+}
+
+.search-button {
+	width: 64px;
+	background-color: green;
 }
